# KooLoopCoder

./: .gitignore  CHANGELOG.md  HANDOFF.md  INSTALL.md  LICENSE  PLAN.md  PROGRESS.md  README.md  bundle.sh  pyproject.toml  setup.sh  test_setup.sh
.github/workflows/: test.yml
agent/loopcoder/: __init__.py  __main__.py  catalog.py  cli.py  config.py  events.py  logsetup.py
agent/tests/: conftest.py
bundle/in_vm/: bootstrap.sh  collect_apt.sh  collect_loopcoder_suite.sh  collect_model.sh  collect_sandbox_image.sh  collect_vllm_image.sh  collect_wheels.sh  make_manifest.sh
bundle/test_vm/: assert_setup_results.sh  destroy_test_vm.sh  domain.xml.template  run_setup_in_vm.sh  setup_test_vm.sh  start_test_vm.sh
bundle/vm/: destroy_vm.sh  domain.xml.template  run_in_vm.sh  setup_vm.sh  start_vm.sh
config/: deploy.yaml.example  install.yaml.example  install.yaml.tiny  loopcoder.yaml.example  model-catalog.yaml  vllm.yaml.example  vllm.yaml.tiny
containers/: loopcoder-sandbox.def  loopcoder-suite.def  vllm.def
docs/: VERIFICATION.md
docs/manuals/: PROCEDURES.md  hpc-slurm.md  model-download-windows.md  one-command-deploy.md  remote-ssh-workflow.md  (+1 more)
examples/: plan_fastapi_hello.yaml  plan_refactor.yaml  plan_simple.yaml  tiny-end-to-end.sh
scripts/: benchmark.sh  build-sif-bundle.sh  deploy.sh  fetch-cwrsync.sh  fetch-models.sh  healthcheck.sh  make_apptainer_images.sh  pack-model.sh  uninstall.sh  upgrade-suite.sh
systemd/: loopcoder.service.template  vllm.service.template  vllm@.service.template
vscode-extension/: README.md  package.json  tsconfig.json
(+102 files in other folders)
