[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loopcoder"
version = "0.1.0"
description = "LoopCoder - Iterative coding agent with infinite-debugging loop, powered by self-hosted LLM."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "koopark" }]
dependencies = [
    "pydantic>=2.6,<3",
    "pyyaml>=6.0,<7",
    "jinja2>=3.1,<4",
    "openai>=1.30,<2",
    "tiktoken>=0.7,<1",
    "rich>=13.7,<14",
    "click>=8.1,<9",
    "GitPython>=3.1,<4",
    "sqlalchemy>=2.0,<3",
    "tenacity>=8.2,<9",
    "platformdirs>=4.2,<5",
    "httpx>=0.27,<1",
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "sse-starlette>=2.0,<3",
    "mcp>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
loopcoder = "loopcoder.cli:main"

[tool.setuptools.packages.find]
where = ["agent"]
include = ["loopcoder*"]

[tool.pytest.ini_options]
testpaths = ["agent/tests"]
pythonpath = ["agent"]
addopts = "-q --strict-markers"
markers = [
    "integration: requires running vLLM (skipped by default)",
    "vm: requires VM (skipped by default)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
